--- a/modulo-00/.vscode/settings.json
+++ b/modulo-00/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.sourcePaths": [
         "algoritmos02\\aula01",
         "algoritmos02\\aula02",
-        "algoritmos02\\aula04"
+        "algoritmos02\\aula04",
+        "algoritmos02\\aula05"
     ]
 }
