--- a/modulo-00/.vscode/settings.json
+++ b/modulo-00/.vscode/settings.json
@@ -3,6 +3,7 @@
         "algoritmos02\\aula01",
         "algoritmos02\\aula02",
         "algoritmos02\\aula04",
-        "algoritmos02\\aula05"
+        "algoritmos02\\aula05",
+        "algoritmos02\\aula06"
     ]
 }
