--- a/modulo-00/.vscode/settings.json
+++ b/modulo-00/.vscode/settings.json
@@ -5,6 +5,7 @@
         "algoritmos02\\aula04",
         "algoritmos02\\aula05",
         "algoritmos02\\aula06",
-        "algoritmos02\\aula07"
+        "algoritmos02\\aula07",
+        "algoritmos02\\aula08"
     ]
 }
