--- a/modulo-00/.vscode/settings.json
+++ b/modulo-00/.vscode/settings.json
@@ -7,6 +7,7 @@
         "algoritmos02\\aula06",
         "algoritmos02\\aula07",
         "algoritmos02\\aula08",
-        "algoritmos02\\aula09"
+        "algoritmos02\\aula09",
+        "estrutura_de_dados"
     ]
 }
