--- a/modulo-02/api-petshop/package.json
+++ b/modulo-02/api-petshop/package.json
@@ -14,6 +14,7 @@
     "config": "^3.3.7",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
   }
 }
