--- a/modulo-02/api-petshop/package.json
+++ b/modulo-02/api-petshop/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "config": "^3.3.7",
     "express": "^4.17.3",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
   }
 }
