--- a/modulo-02/case02/package.json
+++ b/modulo-02/case02/package.json
@@ -1,8 +1,9 @@
 {
   "name": "case02",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./api/server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
